# llm-over-sound

./: .gitattributes  .gitignore  CLAUDE.md  TODO.md
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-template-schema-data-model/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-template-loader-registry/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-base-template-authoring/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-report-renderer/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-composite-templates/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-pipeline-integration/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-UAT.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-replace-ggwave-with-minimodem-both-sides/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-CONTEXT.md  07-RESEARCH.md  07-VALIDATION.md
.planning/quick/260626-wf6-remove-ggwave-quiet-references-from-ahk-/: 260626-wf6-PLAN.md  260626-wf6-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
AHK/: CLAUDE.md  backend.py  ggwave_log.txt  main.ahk  main_dll.ahk  test_minimodem.ahk
AHK/include/: chunking.ahk  compression.ahk  config.ahk  dll_manager.ahk  gui.ahk  logging.ahk  msgid.ahk
archive/: README.md
archive/ggwave-wrapper/: CMakeLists.txt  README.md  build.bat  ggwave_simple.h
docs/plans/: 2026-02-28-minimodem-migration-design.md  2026-02-28-minimodem-migration-plan.md
docs/superpowers/specs/: 2026-06-17-minimodem-transport-design.md
documentation/: cross_device_test_procedure.md  literature_review.md  quiet_build_280226.md  reflections_250626.md  reflections_270226.md  reflections_270226_2.md  retire-legacy-submodules.md  testing-audio.md
ggwave-wrapper/: ggwave_simple.cpp
minimodem-wrapper/: CMakeLists.txt  build.sh  build_deps.sh  build_wrapper.sh  collect_dlls.sh  databits.h  minimodem_internal.h  minimodem_simple.c  minimodem_simple.h  mm_core.c  simpleaudio-winmm.c  tone_generator.c  tone_generator.h
minimodem-wrapper/test/: crc_vector_test.ahk  crc_vector_test.py  loopback_test.c
python-backend/: CLAUDE.md  backend.py  requirements.txt  test-output-audio.py  test_transport.py  testing-audio.py
python-backend/examples/: render_demo.py
python-backend/lib/: __init__.py  audio.py  chunking.py  compression.py  config.py  minimodem.py  pipeline.py  template_schema.py  transport.py
python-backend/lib/templates/: __init__.py  composer.py  defaults.py  exceptions.py  loader.py  registry.py  renderer.py  schema.py
python-backend/rpt_templates/ct/: ct_ap.rpt.md  ct_ap_structured.rpt.md  ct_tap.rpt.md  ct_thorax.rpt.md
python-backend/rpt_templates/us/: us_abdomen.rpt.md  us_hbs.rpt.md  us_kidneys.rpt.md
python-backend/tests/: __init__.py  conftest.py  test_composer.py  test_defaults.py  test_loader.py  test_pipeline_integration.py  test_pipeline_snapshots.py  test_pipeline_task1.py  test_production_templates.py  test_registry.py  test_renderer.py  test_renderer_integration.py  test_template_schema.py
python-backend/tests/fixtures/: sample_template.md
python-backend/tests/fixtures/composite/: base_a.rpt.md  base_b.rpt.md  circular_a.rpt.md  circular_b.rpt.md  composite_ab.rpt.md
python-backend/tests/fixtures/defaults/: atomic_plain.rpt.md  base_x.rpt.md  base_y.rpt.md  base_z.rpt.md  composite_all_empty.rpt.md  composite_nested.rpt.md  composite_xy.rpt.md  cycle_a.rpt.md  cycle_b.rpt.md  dup_measurement.rpt.md  group_measurements.rpt.md  technique_placeholder.rpt.md  us_hbs_reference.rpt.md
python-backend/tests/fixtures/invalid/: bad_frontmatter.rpt.md  duplicate_alias.rpt.md
python-backend/tests/fixtures/registry_fixtures/ct/: ct_abdomen.rpt.md  ct_thorax.rpt.md
python-backend/tests/fixtures/registry_fixtures/us/: us_hbs.rpt.md
python-backend/tests/fixtures/renderer/: freeform_minimal.rpt.md  groups_minimal.rpt.md  measurements_minimal.rpt.md  structured_minimal.rpt.md
python-backend/tests/snapshots/: ct_ap_freeform_render.txt  ct_ap_structured_render.txt  ct_tap_render.txt  us_hbs_render.txt
quiet-wrapper/: CMakeLists.txt  build_deps.sh  build_wrapper.sh  collect_dlls.sh  quiet_simple.c  quiet_simple.h
